# RosNeft

./: Untitled 1.odg
STM32/PID_test/: .mxproject  CMakeLists.txt  PID_test.ioc
STM32/PID_test/Core/Inc/: main.h
STM32/PID_test/Core/Src/: main.c
STM32/PID_test/cmake/stm32cubemx/: CMakeLists.txt
STM32/PID_test/libs/PID/: CMakeLists.txt
STM32/PID_test/libs/PID/Inc/: PID.h
STM32/PID_test/libs/PID/Src/: PID.c
STM32/Probe/: .mxproject  Makefile  Probe.ioc  STM32F401CCUx_FLASH.ld
STM32/Probe/App/Inc/: app.h
STM32/Probe/App/Src/: app.c
STM32/Probe/Core/Inc/: main.h
STM32/Probe/Core/Src/: main.c  stm32f4xx_hal_msp.c
STM32/Stalin/: .mxproject  CMakeLists.txt  Stalin.ioc  compile_commands.json
STM32/Stalin/App/Inc/: App.h
STM32/Stalin/App/Src/: App.c  Interrupt.c
STM32/Stalin/Core/Inc/: main.h  stm32f4xx_it.h
STM32/Stalin/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32/Stalin/libs/AS5600/Inc/: AS5600LikeOdometr.h
STM32/Stalin/libs/AS5600/Src/: AS5600LikeOdometr.c  I2C_Processing.c
STM32/Stalin/libs/Encoder/Inc/: Encoder.h
STM32/Stalin/libs/Encoder/Src/: Encoder.c
STM32/Stalin/libs/Motor/Inc/: Motor.h  types.h
STM32/Stalin/libs/Motor/Src/: Motor.c
STM32/Stalin/libs/PID/: CMakeLists.txt
STM32/Stalin/libs/PID/Inc/: PID.h
STM32/Stalin/libs/PID/Src/: PID.c
